bundled_metadata/force-app/main/default/objects/Template_Config__mdt/Template_Config__mdt.object-meta.xml
<CustomObject>
    <label>Template Config</label>
    <pluralLabel>Template Configs</pluralLabel>
</CustomObject>