bundled_metadata/force-app/main/default/objects/Template_Config__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>