bundled_metadata/force-app/main/default/objects/Template_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>