bundled_metadata/force-app/main/default/objects/Template_Config__mdt/fields/Template_Label__c.field-meta.xml
<CustomField>
    <fullName>Template_Label__c</fullName>
    <label>Template Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>